<resources>
    <string name="app_name">HeartRatioApp</string>
    <string name="welcome">Welcome</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="username">username</string>
    <string name="new_rec">Record New Heartbeat</string>
    <string name="watch_hist">Watch Your History</string>
    <string name="diagnose">Diagnose Yourself</string>
    <string name="settings">Settings</string>
    <string name="emergency_number">Emergency number</string>
    <string name="notifications">Notifications</string>
    <string name="current_number">Current number: %1$s</string>
    <string name="rec_start">Start Recording</string>
    <string name="update_button">Update</string>
    <string name="bpm">BPM:</string>
    <string name="channel_name">hra_channel</string>
    <string name="channel_description">default channel</string>
    <string name="notify_title">Daily Heart Rate Measure</string>
    <string name="notify_content">Click here to do your daily heart rate measure</string>
</resources>