<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".welcome_activity.WelcomeActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:textStyle="bold"
        android:text="@string/welcome"
        >

    </TextView>

    <Button
        android:id="@+id/register_welcome_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_marginTop="40dp"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"

        >

    </Button>

    <Button
        android:id="@+id/login_welcome_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_marginTop="10dp"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"

        >

    </Button>

</LinearLayout>